--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
                             <div class="col col-lg-5 col-md-12 col-12">
                                 <div class="contact-info">
                                     <ul>
-                                        <li><a href="https://facebook.com/247sl_events"><i class="fi flaticon-facebook-app-symbol"></i></a></li>
-                                        <li><a href="247sl_events"><i class="fi flaticon-instagram-1"></i></a></li>
-                                        <li><a href="247sl_events"><i class="fi flaticon-youtube"></i></a></li>
+                                        <li><a href="https://www.facebook.com/247sl_events"><i class="fi flaticon-facebook-app-symbol"></i></a></li>
+                                        <li><a href="https://www.instagram.com/247sl_events"><i class="fi flaticon-instagram-1"></i></a></li>
+                                        <li><a href="https://www.youtube.com/247sl_events"><i class="fi flaticon-youtube"></i></a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -363,15 +363,15 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="grid">
+                                <!-- <div class="grid">
                                     <div class="img-holder">
                                         <img src="assets/images/portfolio/4.jpg" alt class="img img-responsive">
-                                        <!-- <div class="hover-content">
+                                        <div class="hover-content">
                                             <h4><a href="portfolio-single.html">Maria & Nevela</a></h4>
                                             <span>London - Sep, 2020</span>
-                                        </div> -->
+                                        </div>
                                     </div>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
@@ -740,22 +740,17 @@
                                 <p>We believe in making your dream event come into reality</p>
                                 <ul>
                                     <li>
-                                        <a href="#">
+                                        <a href="https://www.facebook.com/247sl_events">
                                             <i class="ti-facebook"></i>
                                         </a>
-                                    </li>
+                                    </li>                               
                                     <li>
-                                        <a href="#">
-                                            <i class="ti-twitter-alt"></i>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#">
+                                        <a href="https://www.instagram.com/247sl_events">
                                             <i class="ti-instagram"></i>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#">
+                                        <a href="https://www.google.com/247sl_events">
                                             <i class="ti-google"></i>
                                         </a>
                                     </li>
