added portfolio about contact services pages

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <div class="loader-line-mask">
                         <div class="loader-line"></div>
                     </div>
-                    <img style="height:400px" src="assets/images/company_logo.jpg" alt="">
+                    <!-- <img style="height:400px" src="assets/images/company_logo.jpg" alt=""> -->
                 </div>
             </div>
         </div>
@@ -88,7 +88,7 @@
                             </div>
                             <div class="col-lg-2 col-md-6 col-6">
                                 <div class="navbar-header">
-                                    <a class="navbar-brand logo" href="index.html"><img src="assets/images/company_logo.jpg"></a>
+                                    <a class="navbar-brand logo" href="index.html">247slEvents</a>
                                 </div>
                             </div>
                             <div class="col-lg-10 col-md-1 col-1">
@@ -101,8 +101,9 @@
                                         <li><a href="ourstory.html">Our Story</a></li>
                                         <li><a href="about.html">About Us</a></li>
                                         <li><a href="service.html">Services</a></li>
-                                        <li><a href="gallery.html">Gallery</a></li>
-                                        <li><a href="blog.html">Blog</a></li>                                    
+                                        <li><a href="portfolio.html">Portfolio</a></li>
+                                        <li><a href="blog.html">Blog</a></li>  
+                                        <li><a href="event_academy.html">Our event academy</a></li>                                                                      
                                         <li><a href="contact.html">Contact</a></li>
                                     </ul>
 
@@ -481,55 +482,60 @@
                 <div class="wpo-testimonial-wrap">
                     <div class="testimonial-slider owl-carousel">
                         <div class="wpo-testimonial-item">
-                            <div class="wpo-testimonial-img">
+                            <!-- <div class="wpo-testimonial-img">
                                 <img src="assets/images/testimonial/img-1.jpg" alt="">
-                            </div>
+                            </div> -->
                             <div class="wpo-testimonial-content">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. </p>
-                                <h2>Jenefer Watson</h2>
-                                <span>Previous Client</span>
+                                <h2>Mr and Mrs Adeyemi</h2>
+                                <p>Dear 247slEvents team, we want to express our deepest gratitude for the incredible job you did in planning and cordinating our wedding.
+                                    your attention to detail, your creativity and your efforts really made our day unforgettable. From the stunning decorations to the seamless coordination, every aspect
+                                    was beutiful, it wasn't entirely flawless, but it's a job very well done and that we truly appreciate that.
+                                    Your team's dedication was evident throughout the entire process. 
+                                </p>
                             </div>
                         </div>
                         <div class="wpo-testimonial-item">
-                            <div class="wpo-testimonial-img">
+                            <!-- <div class="wpo-testimonial-img">
                                 <img src="assets/images/testimonial/img-2.jpg" alt="">
-                            </div>
+                            </div> -->
                             <div class="wpo-testimonial-content">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. </p>
-                                <h2>Merry Haven</h2>
-                                <span>Previous Client</span>
+                                <h2>Fayo & Bolu</h2>
+                                <p>
+                                  247slEvents you are the best, Thank you for all you did towards my wedding preparations till D day.
+                                   I couldn't have asked for a better event coordinator. You went all out, infact when i drove in from church and saw the picture area,
+                                    I knew there were more wonderful creations inside. I got in and truly i was WOOOOOOOOOWWWEED.
+                                     I give you  101 iver hundred. You wanted something unique and you did it.
+                                </p>
+
                             </div>
                         </div>
                         <div class="wpo-testimonial-item">
-                            <div class="wpo-testimonial-img">
+                            <!-- <div class="wpo-testimonial-img">
                                 <img src="assets/images/testimonial/img-3.jpg" alt="">
-                            </div>
+                            </div> -->
                             <div class="wpo-testimonial-content">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. </p>
-                                <h2>Aliza Anne</h2>
-                                <span>Previous Client</span>
+                                <h2>Mrs Lola Fatoyinbo</h2>
+                                <p>
+                                    These last three days have been a blessing to myself and my family. We are appreciative and thankfull!!!
+                                    Thank you so much for gracing the sendoff reception of our mum. We appreciate you and you time spent. 
+                                    You made the day more beutiful, May God beutify your lives, and may he bless you with all your heart desires, 
+                                    It was trully a blessed event, my newest angel in Heaven says thank you!!!
+                                </p>
                             </div>
                         </div>
                         <div class="wpo-testimonial-item">
-                            <div class="wpo-testimonial-img">
+                            <!-- <div class="wpo-testimonial-img">
                                 <img src="assets/images/testimonial/img-1.jpg" alt="">
-                            </div>
+                            </div> -->
                             <div class="wpo-testimonial-content">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. </p>
                                 <h2>Jenefer Watson</h2>
-                                <span>Previous Client</span>
+                                <p>
+                                    I really appreciate all yout effors concerning the planning of my wedding #TMCForever'21. I can't hide my joy at all, happiness is an understatement. 
+                                    I have been receiving good reviews concerning everything, people ate more than three times, drinks were surplus. All the vendors were happy to work with you.
+                                    You made 18/12/2021 a reality and a success. I am glad i listened to you. God will bless you and your business will grow internationally  ijn.
+                                </p>
                             </div>
-                        </div>
-                        <div class="wpo-testimonial-item">
-                            <div class="wpo-testimonial-img">
-                                <img src="assets/images/testimonial/img-2.jpg" alt="">
-                            </div>
-                            <div class="wpo-testimonial-content">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. </p>
-                                <h2>Merry Haven</h2>
-                                <span>Previous Client</span>
-                            </div>
-                        </div>
+                        </div>        
                     </div>
                 </div>
             </div>
